@@ -24,50 +24,42 @@ int main(int argc, char *argv[]) {
   struct mschmd_header *chm;
   struct mschmd_file *file, **f;
   unsigned int numf, i;
+  int err;
   FILE *fh;
 
   setbuf(stdout, NULL);
   setbuf(stderr, NULL);
 
-  MSPACK_SYS_SELFTEST(i);
-  if (i) return 0;
+  MSPACK_SYS_SELFTEST(err);
+  if (err) return 0;
 
   if ((chmd = mspack_create_chm_decompressor(NULL))) {
     for (argv++; *argv; argv++) {
-      printf("%s\n", *argv);
+      printf("*** %s\n", *argv);
       if ((chm = chmd->open(chmd, *argv))) {
 
-	/* EXTRACT OUT OF ORDER [alpha ordered returned by open()] */
-	for (file=chm->files; file; file = file->next) {
-	  if (chmd->extract(chmd, file, FILENAME)) {
-	    fprintf(stderr, "%s: extract error on \"%s\": %s\n",
-		    *argv, file->filename, ERROR(chmd));
-	    exit(1);
-	  }
-	  if ((fh = fopen(FILENAME, "rb"))) {
-	    unsigned char buf[16];
-	    memset(buf, 0, 16);
-	    md5_stream (fh, &buf[0]);
-	    fclose(fh);
-	    printf("%02x%02x%02x%02x%02x%02x%02x%02x"
-		   "%02x%02x%02x%02x%02x%02x%02x%02x %s\n",
-		   buf[0], buf[1], buf[2], buf[3], buf[4], buf[5], buf[6],
-		   buf[7], buf[8], buf[9], buf[10], buf[11], buf[12],
-		   buf[13], buf[14], buf[15], file->filename);
-	  }
-	  unlink(FILENAME);
-	}
-	/* EXTRACT IN ORDER [ordered by offset into content section] */
+	/* extract in order of the offset into content section - faster */
 	for (numf=0, file=chm->files; file; file = file->next) numf++;
 	if ((f = calloc(numf, sizeof(struct mschmd_file *)))) {
 	  for (i=0, file=chm->files; file; file = file->next) f[i++] = file;
 	  qsort(f, numf, sizeof(struct mschmd_file *), &sortfunc);
 	  for (i = 0; i < numf; i++) {
-	    if (chmd->extract(chmd, f[i], ".test")) {
+	    if (chmd->extract(chmd, f[i], FILENAME)) {
 	      fprintf(stderr, "%s: extract error on \"%s\": %s\n",
 		      *argv, f[i]->filename, ERROR(chmd));
 	      exit(1);
 	    }
+            if ((fh = fopen(FILENAME, "rb"))) {
+              unsigned char buf[16];
+              memset(buf, 0, 16);
+              md5_stream (fh, &buf[0]);
+              fclose(fh);
+              printf("%02x%02x%02x%02x%02x%02x%02x%02x"
+                     "%02x%02x%02x%02x%02x%02x%02x%02x %s\n",
+                     buf[0], buf[1], buf[2], buf[3], buf[4], buf[5], buf[6],
+                     buf[7], buf[8], buf[9], buf[10], buf[11], buf[12],
+                     buf[13], buf[14], buf[15], f[i]->filename);
+            }
 	  }
 	  free(f);
 	}
